app/styles/main.scss
/* ... */
/******************
*** Spot Page
*******************/
#spot-page {

  .title-bar {
    @include page-element(10px, 10px, left, top);
    height: 300px;

    .spot-name {
      margin: 0;
    }

    .details-left {
      display: inline-block;
      float: left;
      height: 202px;
      max-width: 300px;
      margin-top: -10px;
      vertical-align: top;
      color: $acc-dark;
    }

    .details-top {
      height: 100px;
    }

    .spot-address {
      margin: 5px 0 0 15px;
      color: $acc-dark; 
      text-overflow: ellipsis;

      h5 {
        margin: 0;
      }
    }

    .rating {
      margin: 5px 0 50px 0;
    }

    .spot-types {
      height: 100px;
      vertical-align: bottom;
      display: table-cell;
    }

    .details-right {
      display: inline-block;
      margin: -20px 0 0 20px;
      vertical-align: top;
      height: 202px;

      h3 {
        margin-bottom: 0;
      }

      h5 {
        margin: -10px 0 0 20px;
      }
    }

    .current-status {
      height: 173px;
    }
     
    .current-status-header{
      display: inline-block;
      margin: 5px 0 0 0;
    }

    .current-status-info {
      display: inline-block;
      margin: -5px 0 0 20px;
    }

    .current-status-time {
      color: $acc-dark;
    }

    .status {
    }

    .watch-comment {
      width: 360px;
      max-height: 60px;
      text-overflow: ellipsis;
    }

    .watch-comment-user {
      color: $comp1-dark;
      font-weight: bold;
      //margin-left: 18px;
    }

    .yelp-link {
      vertical-align: bottom;
    }

    .ad-text {
      @include ad-element;
      width: 100%;
      height: 60px;
      min-width: 468px;

      h6 {
        float: right;
        padding-right: 10px;
      }

      h5 {
        padding: 10px;
      }

      .author {
        margin: -30px 0 0 40px;
      }
    }
  }

  .edit-spot {
    color: $comp2-dark;
    margin: 25px 0 0 0;
    float: right;

    &:hover {
      cursor: pointer;
      color: $comp1-dark; 
    }    
  }


  .type {
    display: inline-block;
    font-size: 18px;
    font-weight: bold;
    text-align: center;
  }

  .visualize {
    @include page-element
  }

  .reviews {
    @include page-element(10px, 10px, left);
    min-height: 400px;

    hr {
      margin-top: 5px 0;
      width: 640px;
    }

    .user {
      img {
        height: 40px;
        width: 40px;
      }
    }

    .info {
      p {
        margin: 20px 0 0 0;
      }
    }
  }

  .review-nums {
    width: 200px;
    display: inline-block;
  }

  .review {

    .user {
      display: inline-block;
      margin: 10px 0 0 0;
    }

    .info {
      display: inline-block;
      float: right;
      padding: 8px 10px 0 0;
      width: 85%;
    }
  }

  .add-review {
    float: right;
    margin-top: 0;
  }

  .find-nearby {
    padding: 0 0 0 70px;
    margin: 0 0 10px 0;

    h3 {
      display: inline-block;
      margin: 0;
    }

    &:hover {
      cursor: pointer;
    }
  }

  .nearby-type {
    padding: 0 0 5px 20px;

    div, h4 {
      display: inline-block;
      margin: 10px;
    }

    .b4cm-icon {
      height: 50px;
      width: 50px;
    }
  }
  .more {

    a { 
      color: $text-dark;

      &:hover {
        color: $comp1-dark;
        cursor: pointer;
      }
    }
  }
}

@media screen and (max-width: $break-small){
  #spot-page {

    // TODO: parent spot page selectors are too nested

    .title-bar {
      height: auto !important;
    }

    .main-col, .side-col {
      display: block;
      width: 100%;
      float: none !important;
    }

    .spot-name {
      @include text-overflow();
      font-size: 16px;
      margin-bottom: -5px !important;
      width: 100%;
    }

    .details-left {
      //height: 100px !important;
      display: block !important;
      float: none !important;
      width: 100% !important;
      max-width: 100% !important;
    }

    .spot-address {
      font-size: 12px;
      
      h5 {
        line-height: 15px;
      }
    }

    .stars {
      img {
        height: 20px;
        width: 20px;
      }

      .review-count {
        font-size: 10px;
      }
    }

    .spot-types {
      display: block !important;
      width: 100% !important;
    }

    .details-right {
      display: block !important;
      height: 100px !important;
      width: 100% !important;
      margin: -20px 0 0 0 !important;
    }

    .ad-text {
      width: 100% !important;
      min-width: 0px !important;
    }

    hr {
      width: 100% !important;
    }

    .current-status {
      height: auto !important;
    }

    // TODO: global conflict with listings .info class.
    .info {
      float: none !important;
      width: 220px !important;
      margin-left: 10px;

      p {
        margin-top: 0 !important;
      }
    }

    .review-nums {
      width: 150px;
    }
  }
}
/******************
*** Sign Up Page 
*******************/
#sign-up, #sign-in {
  @include page-element;


  .login-method {
    display: inline-block;
    text-align: center;
    padding: 20px;

    &.facebook .icon {
      background-position: 0 0;
    }

    &.twitter .icon {
      background-position: -41px 0;
    }

    &.github .icon {
      background-position: -83px 0;
    }

    &.persona .icon {
      background-position: -125px 0;
    }

    .icon {
      background: url('../images/social-icons.png');
      background-size: 250px 50px;
      width: 42px;
      height: 50px;
      margin: auto;
    }

  }

  .b4cm-signup, .b4cm-signin {
    display: inline-block;
    width: 380px;
    padding: 0 10px;
    vertical-align: top;

    .control-label {
      width: 100px;
    }

    .controls {
      margin-left: 110px;
    }
  }

  .sign-up-btn {
    text-align: left;

    .btn {
      margin: 0px 0 0 25px;
    }
  }

  .third-party-signup {
    display: inline-block;
    width: 40%;
    vertical-align: top;

    div {
      text-align: center;
    }

    .login-method:hover {
      cursor: pointer;
    }
  }
}
/* ... */

